--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,12 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  font-family: Courier, monospace;
+  min-width: auto;
+  gap: 15px;
 }
 
 .logo {
@@ -9,11 +15,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  border-radius: 5px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 15px;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -22,4 +33,14 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.left-links {
+  margin-right: auto;
+}
+
+.right-links {
+  margin-left: auto;
 }
