--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  align-items: center;
+  gap: 24px;
 }
 
 .profile-image {
@@ -45,4 +49,29 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24px;
+  text-wrap: nowrap;
+}
+
+.left {
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+}
+
+.right {
+  display: flex;
+  margin-left: auto;
+  gap: 18px;
+  align-items: center;
+}
+
+.notifications {
+  padding: 8px 24px;
+  height: 2.5em;
+  text-align: center;
+  text-wrap: nowrap;
 }
