Done ex. 04 from flex

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,7 +10,34 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
+
+.plants {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 52px;
+  justify-content: space-between;
+}
+
+.text {
+  text-align: center;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  justify-content: flex-start;
+  width: 200px;
+  flex: 0 1 auto;
+}
+
+
+
+
 
 /* do not edit this footer */
 .footer {
