--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+  justify-content: space-between;
 }
 
 .icon {
@@ -33,6 +37,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 0 0 auto;
+}
+
+.header {
+  font-weight: 900;
+  font-size: 18px;
+  margin: 0;
 }
 
 .close-button {
@@ -48,6 +59,14 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
+  flex: 0 0 auto;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 button {
@@ -66,4 +85,10 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header-button {
+  display: flex;
+  align-items: center;
+  gap: 18px;
 }
