--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,11 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 2fr 1fr 120fr 1fr;
+  gap: 4px;
+  height: 100vh;
 }
 
 .container div {
@@ -16,16 +21,39 @@
 }
 
 .header {
+  grid-column: span 2;
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+  align-items: center;
+}
+
+
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
+}
+
+.menu ul li:first-child {
+  grid-column-start: 2;
 }
 
 .menu ul,
 .menu li {
+  margin: auto 0;
   font-size: 16px;
+  list-style: none;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-row: span 2;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 30px;
+  /* align-items: center; */
 }
 
 .sidebar .photo {
@@ -36,6 +64,10 @@
   border-radius: 10px;
 }
 
+.side-content, .photo{
+  display: grid;
+  align-items: center;
+}
 
 .sidebar .side-content {
   background-color: white;
@@ -46,15 +78,26 @@
 
 .nav {
   background-color: #C50208;
+  grid-row: 2 / 3;
+  grid-column: 2;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -83,6 +126,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
 
 .footer p {
